...
          .accessibilityIdentifier("フレンドの履歴")
      }
      .pickerStyle(SegmentedPickerStyle())
      .background(Color("BackgroundColor"))
      .padding(.horizontal)
      .padding(.top, 8)
      .accessibilityIdentifier("履歴タブSegmentedControl")

      // タブコンテンツ
      TabView(selection: $selectedTab) {
        // 自分の履歴タブ
        myWalkHistoryView
          .tag(0)
...
