...

  /// エラーアラート表示フラグ
  @State private var showingErrorAlert = false

  var body: some View {
    settingsListView
      .navigationTitle("位置情報設定")
      .navigationBarTitleDisplayMode(.inline)
      .background(Color("BackgroundColor"))
      .onAppear {
        updateAuthorizationStatus()
      }
      .alert("設定エラー", isPresented: $showingErrorAlert) {
...
